--- a/CarWashing/MemberView.xib
+++ b/CarWashing/MemberView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,6 +15,9 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="123"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ijanbiantiao" translatesAutoresizingMaskIntoConstraints="NO" id="tQg-oq-hEF">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="123"/>
+                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YJW-xs-lvQ">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
                     <subviews>
@@ -39,7 +42,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" red="1" green="0.84547439280000003" blue="0.29088167599999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="Vp3-OH-hEg" firstAttribute="leading" secondItem="YJW-xs-lvQ" secondAttribute="leading" constant="16" id="2Iy-md-7ql"/>
                         <constraint firstItem="dxD-QE-czf" firstAttribute="leading" secondItem="Vp3-OH-hEg" secondAttribute="trailing" constant="-20" id="D8Q-md-psh"/>
@@ -124,7 +127,7 @@
                             </constraints>
                         </imageView>
                     </subviews>
-                    <color key="backgroundColor" red="1" green="0.67869665670000001" blue="0.093383055830000006" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="4w4-6s-WBe" firstAttribute="leading" secondItem="UlI-cd-vcN" secondAttribute="trailing" constant="7" id="4Xh-yl-PEx"/>
                         <constraint firstItem="4w4-6s-WBe" firstAttribute="centerY" secondItem="UlI-cd-vcN" secondAttribute="centerY" id="Cct-Bo-c0v"/>
@@ -146,11 +149,15 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="tQg-oq-hEF" firstAttribute="leading" secondItem="Zvs-dN-yaH" secondAttribute="leading" id="1T9-zk-GFh"/>
+                <constraint firstItem="tQg-oq-hEF" firstAttribute="top" secondItem="Zvs-dN-yaH" secondAttribute="top" id="8IR-pb-ZJr"/>
                 <constraint firstItem="gHF-Li-SsL" firstAttribute="leading" secondItem="Zvs-dN-yaH" secondAttribute="leading" id="Hja-Dw-F2H"/>
                 <constraint firstAttribute="trailing" secondItem="YJW-xs-lvQ" secondAttribute="trailing" id="IJL-0N-g8f"/>
                 <constraint firstItem="YJW-xs-lvQ" firstAttribute="leading" secondItem="Zvs-dN-yaH" secondAttribute="leading" id="LHg-12-Rhw"/>
                 <constraint firstItem="YJW-xs-lvQ" firstAttribute="top" secondItem="Zvs-dN-yaH" secondAttribute="top" id="gkj-5K-THQ"/>
                 <constraint firstAttribute="trailing" secondItem="gHF-Li-SsL" secondAttribute="trailing" id="iXq-YN-bN5"/>
+                <constraint firstAttribute="bottom" secondItem="tQg-oq-hEF" secondAttribute="bottom" id="kWP-Ob-5yU"/>
+                <constraint firstAttribute="trailing" secondItem="tQg-oq-hEF" secondAttribute="trailing" id="o4m-eH-evF"/>
                 <constraint firstItem="gHF-Li-SsL" firstAttribute="top" secondItem="YJW-xs-lvQ" secondAttribute="bottom" id="vw8-b9-uzD"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -172,6 +179,7 @@
     <resources>
         <image name="huiyuandianjitiaozhuan" width="13" height="13"/>
         <image name="huiyuantou" width="80" height="80"/>
+        <image name="ijanbiantiao" width="375" height="64"/>
         <image name="putong" width="25" height="25"/>
     </resources>
 </document>
