--- a/CarWashing/CarTicketView.xib
+++ b/CarWashing/CarTicketView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,30 +15,47 @@
             <rect key="frame" x="0.0" y="0.0" width="330" height="190"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="qw_tiyanka" translatesAutoresizingMaskIntoConstraints="NO" id="7eU-wI-YLB">
-                    <rect key="frame" x="0.0" y="0.0" width="330" height="190"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_card" translatesAutoresizingMaskIntoConstraints="NO" id="7eU-wI-YLB">
+                    <rect key="frame" x="0.0" y="0.0" width="330" height="192"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="商家洗车自动抵扣" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UAk-wD-Zx5">
-                    <rect key="frame" x="22" y="21" width="49" height="19.5"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="体验卡" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UAk-wD-Zx5">
+                    <rect key="frame" x="22" y="21" width="55.5" height="21.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1000积分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ibe-We-2cf">
-                    <rect key="frame" x="244" y="143" width="69.5" height="19.5"/>
+                    <rect key="frame" x="16" y="150" width="69.5" height="19.5"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="金顶洗车" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FfR-hc-p5q">
+                    <rect key="frame" x="79" y="30" width="41" height="12"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="扫码洗车自动抵扣" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p0W-fc-vhf">
+                    <rect key="frame" x="22" y="44.5" width="98.5" height="14.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="7eU-wI-YLB" firstAttribute="leading" secondItem="4N0-Gs-7om" secondAttribute="leading" id="1CB-MS-mjw"/>
-                <constraint firstItem="7eU-wI-YLB" firstAttribute="top" secondItem="4N0-Gs-7om" secondAttribute="top" id="Elb-GF-hT8"/>
-                <constraint firstAttribute="trailing" secondItem="7eU-wI-YLB" secondAttribute="trailing" id="NlE-ce-jJE"/>
-                <constraint firstAttribute="bottom" secondItem="7eU-wI-YLB" secondAttribute="bottom" id="SgR-OE-tgZ"/>
+                <constraint firstItem="FfR-hc-p5q" firstAttribute="bottom" secondItem="UAk-wD-Zx5" secondAttribute="bottom" id="4ei-rZ-kX5"/>
+                <constraint firstItem="UAk-wD-Zx5" firstAttribute="leading" secondItem="7eU-wI-YLB" secondAttribute="leading" constant="22" id="5Wr-KQ-YL8"/>
+                <constraint firstItem="p0W-fc-vhf" firstAttribute="bottom" secondItem="UAk-wD-Zx5" secondAttribute="bottom" constant="16.5" id="OVI-Ua-UJn"/>
+                <constraint firstItem="FfR-hc-p5q" firstAttribute="leading" secondItem="UAk-wD-Zx5" secondAttribute="leading" constant="57" id="P3b-ie-4Ap"/>
+                <constraint firstAttribute="trailing" secondItem="7eU-wI-YLB" secondAttribute="trailing" id="PmY-6a-2p2"/>
+                <constraint firstAttribute="bottom" secondItem="7eU-wI-YLB" secondAttribute="bottom" constant="-2" id="fkW-yk-64B"/>
+                <constraint firstItem="p0W-fc-vhf" firstAttribute="leading" secondItem="UAk-wD-Zx5" secondAttribute="leading" id="gF4-OP-XFD"/>
+                <constraint firstItem="7eU-wI-YLB" firstAttribute="leading" secondItem="4N0-Gs-7om" secondAttribute="leading" id="pGL-4x-m7d"/>
+                <constraint firstItem="7eU-wI-YLB" firstAttribute="top" secondItem="4N0-Gs-7om" secondAttribute="top" id="wZc-W6-wrc"/>
+                <constraint firstItem="UAk-wD-Zx5" firstAttribute="top" secondItem="7eU-wI-YLB" secondAttribute="top" constant="21" id="yQK-Xm-8MU"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -51,6 +68,6 @@
         </view>
     </objects>
     <resources>
-        <image name="qw_tiyanka" width="330" height="190"/>
+        <image name="bg_card" width="317" height="192"/>
     </resources>
 </document>
