--- a/CarWashing/MemberView.xib
+++ b/CarWashing/MemberView.xib
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DSMembershipController"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="Zvs-dN-yaH" customClass="MemberView">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="123"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="158"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ijanbiantiao" translatesAutoresizingMaskIntoConstraints="NO" id="tQg-oq-hEF">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="123"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tQg-oq-hEF">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="158"/>
+                    <color key="backgroundColor" red="1" green="0.79325598478317261" blue="0.16368475556373596" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YJW-xs-lvQ">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
@@ -41,119 +42,86 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tNc-gd-0JF">
-                            <rect key="frame" x="0.0" y="79" width="375" height="1"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="1" id="h9g-Yu-3ZX"/>
-                            </constraints>
-                        </view>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="Vp3-OH-hEg" firstAttribute="leading" secondItem="YJW-xs-lvQ" secondAttribute="leading" constant="16" id="2Iy-md-7ql"/>
                         <constraint firstItem="dxD-QE-czf" firstAttribute="leading" secondItem="Vp3-OH-hEg" secondAttribute="trailing" constant="-20" id="D8Q-md-psh"/>
                         <constraint firstItem="Vp3-OH-hEg" firstAttribute="top" secondItem="YJW-xs-lvQ" secondAttribute="top" constant="13" id="DGT-g3-QNF"/>
-                        <constraint firstItem="tNc-gd-0JF" firstAttribute="leading" secondItem="YJW-xs-lvQ" secondAttribute="leading" id="DYH-pk-652"/>
                         <constraint firstItem="ZU9-dr-hhs" firstAttribute="centerY" secondItem="Vp3-OH-hEg" secondAttribute="centerY" id="PIe-Xu-hCm"/>
                         <constraint firstItem="ZU9-dr-hhs" firstAttribute="leading" secondItem="Vp3-OH-hEg" secondAttribute="trailing" constant="22" id="WR5-Gr-WtN"/>
                         <constraint firstAttribute="height" constant="78" id="fox-3C-7tM"/>
                         <constraint firstItem="dxD-QE-czf" firstAttribute="top" secondItem="Vp3-OH-hEg" secondAttribute="bottom" constant="-17" id="on6-FN-xoT"/>
-                        <constraint firstAttribute="trailing" secondItem="tNc-gd-0JF" secondAttribute="trailing" id="uJd-ZX-hLS"/>
-                        <constraint firstItem="tNc-gd-0JF" firstAttribute="top" secondItem="dxD-QE-czf" secondAttribute="bottom" constant="11" id="yri-aq-Xdc"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gHF-Li-SsL">
-                    <rect key="frame" x="0.0" y="78" width="375" height="45"/>
+                    <rect key="frame" x="0.0" y="78" width="375" height="80"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="huiyuandianjitiaozhuan" translatesAutoresizingMaskIntoConstraints="NO" id="4w4-6s-WBe">
-                            <rect key="frame" x="89" y="17" width="13" height="13"/>
+                        <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="huiyuandianjitiaozhuan" translatesAutoresizingMaskIntoConstraints="NO" id="4w4-6s-WBe">
+                            <rect key="frame" x="62" y="16" width="13" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="13" id="i8O-Vc-P2j"/>
                                 <constraint firstAttribute="height" constant="13" id="wDm-E5-gih"/>
                             </constraints>
                         </imageView>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="avn-Xs-7uj">
-                            <rect key="frame" x="187" y="10" width="1" height="25"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="huiyuandianjitiaozhuan" translatesAutoresizingMaskIntoConstraints="NO" id="jgh-Pq-8Rg">
+                            <rect key="frame" x="250" y="16" width="13" height="13"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="1" id="4g4-Vj-DOC"/>
-                                <constraint firstAttribute="height" constant="25" id="iFJ-s3-2U0"/>
+                                <constraint firstAttribute="height" constant="13" id="E6n-EL-3Hk"/>
+                                <constraint firstAttribute="width" constant="13" id="Nib-fr-HF6"/>
                             </constraints>
-                        </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UlI-cd-vcN">
-                            <rect key="frame" x="16" y="7" width="66" height="32"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                            <state key="normal" title="普通会员">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
+                        </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UlI-cd-vcN">
+                            <rect key="frame" x="18" y="24" width="39" height="39"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="39" id="5dB-Lc-G5P"/>
+                                <constraint firstAttribute="width" constant="39" id="9Nf-KN-jqx"/>
+                            </constraints>
+                            <state key="normal" image="huiyuan_dengjitequan"/>
                             <connections>
                                 <action selector="clickMemberButton:" destination="-1" eventType="touchUpInside" id="qEo-gA-GFF"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u0O-fD-QVH">
-                            <rect key="frame" x="204" y="7" width="30" height="32"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                            <state key="normal" title="0分">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u0O-fD-QVH">
+                            <rect key="frame" x="206" y="24" width="39" height="39"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" image="huiyuan_wodejifen">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
                                 <action selector="clickMemberScoreBtn:" destination="-1" eventType="touchUpInside" id="ntc-Lx-T7g"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Da5-xF-kll">
-                            <rect key="frame" x="295" y="13" width="60" height="20"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="60" id="2RQ-Mv-JIW"/>
-                                <constraint firstAttribute="height" constant="20" id="ACM-wd-pFp"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <state key="normal" title="赚积分">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Da5-xF-kll">
+                            <rect key="frame" x="310" y="21" width="39" height="39"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" image="huiyuan_zhuanjifen">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
                                 <action selector="clickEarnScoreBtn:" destination="-1" eventType="touchUpInside" id="3E8-hY-y3G"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c6y-hM-H7p">
-                            <rect key="frame" x="111" y="13" width="60" height="20"/>
+                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c6y-hM-H7p">
+                            <rect key="frame" x="113" y="24" width="39" height="39"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="60" id="MXU-KL-mhX"/>
-                                <constraint firstAttribute="height" constant="20" id="UsQ-Mx-OIC"/>
+                                <constraint firstAttribute="width" constant="39" id="HIS-eM-DeY"/>
+                                <constraint firstAttribute="height" constant="39" id="MQu-vz-eWS"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <state key="normal" title="升等级">
+                            <state key="normal" image="huiyuan_shengdengji">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
                                 <action selector="clickUpgradeBtn:" destination="-1" eventType="touchUpInside" id="EAQ-7f-MDI"/>
                             </connections>
                         </button>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="huiyuandianjitiaozhuan" translatesAutoresizingMaskIntoConstraints="NO" id="jgh-Pq-8Rg">
-                            <rect key="frame" x="241" y="16" width="13" height="13"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="13" id="E6n-EL-3Hk"/>
-                                <constraint firstAttribute="width" constant="13" id="Nib-fr-HF6"/>
-                            </constraints>
-                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="4w4-6s-WBe" firstAttribute="leading" secondItem="UlI-cd-vcN" secondAttribute="trailing" constant="7" id="4Xh-yl-PEx"/>
-                        <constraint firstItem="4w4-6s-WBe" firstAttribute="centerY" secondItem="UlI-cd-vcN" secondAttribute="centerY" id="Cct-Bo-c0v"/>
-                        <constraint firstItem="jgh-Pq-8Rg" firstAttribute="centerY" secondItem="gHF-Li-SsL" secondAttribute="centerY" id="E6p-UP-LgD"/>
-                        <constraint firstItem="u0O-fD-QVH" firstAttribute="leading" secondItem="avn-Xs-7uj" secondAttribute="trailing" constant="16" id="FTp-fS-6g3"/>
-                        <constraint firstItem="c6y-hM-H7p" firstAttribute="centerY" secondItem="gHF-Li-SsL" secondAttribute="centerY" id="JNK-Re-Im1"/>
-                        <constraint firstItem="Da5-xF-kll" firstAttribute="centerY" secondItem="gHF-Li-SsL" secondAttribute="centerY" id="ayT-tN-lRk"/>
-                        <constraint firstItem="UlI-cd-vcN" firstAttribute="leading" secondItem="gHF-Li-SsL" secondAttribute="leading" constant="16" id="bWO-8Q-Qun"/>
-                        <constraint firstAttribute="height" constant="45" id="dau-Ea-4iX"/>
-                        <constraint firstItem="avn-Xs-7uj" firstAttribute="centerX" secondItem="gHF-Li-SsL" secondAttribute="centerX" id="eTW-5k-teL"/>
-                        <constraint firstItem="jgh-Pq-8Rg" firstAttribute="leading" secondItem="u0O-fD-QVH" secondAttribute="trailing" constant="7" id="jAl-O0-h0C"/>
-                        <constraint firstItem="avn-Xs-7uj" firstAttribute="centerY" secondItem="gHF-Li-SsL" secondAttribute="centerY" id="mck-gj-KVR"/>
-                        <constraint firstAttribute="trailing" secondItem="Da5-xF-kll" secondAttribute="trailing" constant="20" id="tmG-M3-mfE"/>
-                        <constraint firstItem="u0O-fD-QVH" firstAttribute="centerY" secondItem="gHF-Li-SsL" secondAttribute="centerY" id="vbr-ox-999"/>
-                        <constraint firstItem="UlI-cd-vcN" firstAttribute="centerY" secondItem="gHF-Li-SsL" secondAttribute="centerY" id="x9X-XP-Vly"/>
-                        <constraint firstItem="avn-Xs-7uj" firstAttribute="leading" secondItem="c6y-hM-H7p" secondAttribute="trailing" constant="16" id="zrI-Q0-jg9"/>
+                        <constraint firstItem="jgh-Pq-8Rg" firstAttribute="centerY" secondItem="gHF-Li-SsL" secondAttribute="centerY" constant="-17.5" id="E6p-UP-LgD"/>
+                        <constraint firstAttribute="bottom" secondItem="c6y-hM-H7p" secondAttribute="bottom" constant="17" id="Hj1-Ic-bac"/>
+                        <constraint firstAttribute="height" constant="80" id="dau-Ea-4iX"/>
+                        <constraint firstAttribute="bottom" secondItem="UlI-cd-vcN" secondAttribute="bottom" constant="17" id="wXF-gI-Dkq"/>
                     </constraints>
                 </view>
             </subviews>
@@ -183,13 +151,16 @@
                 <outlet property="signLabel" destination="dxD-QE-czf" id="hdO-SF-t1T"/>
                 <outlet property="topContainView" destination="YJW-xs-lvQ" id="Vwp-xf-uVx"/>
             </connections>
-            <point key="canvasLocation" x="-426.5" y="-374.5"/>
+            <point key="canvasLocation" x="-426.5" y="-357"/>
         </view>
     </objects>
     <resources>
+        <image name="huiyuan_dengjitequan" width="39" height="39"/>
+        <image name="huiyuan_shengdengji" width="39" height="39"/>
+        <image name="huiyuan_wodejifen" width="39" height="39"/>
+        <image name="huiyuan_zhuanjifen" width="39" height="39"/>
         <image name="huiyuandianjitiaozhuan" width="13" height="13"/>
         <image name="huiyuantou" width="80" height="80"/>
-        <image name="ijanbiantiao" width="375" height="64"/>
         <image name="putong" width="25" height="25"/>
     </resources>
 </document>
