--- a/CarWashing/BusinessDetailHeaderView.xib
+++ b/CarWashing/BusinessDetailHeaderView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,10 +15,11 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="193"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="上海金雷快修车" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vsy-uM-wV1">
-                    <rect key="frame" x="20" y="9" width="114.5" height="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="150" verticalHuggingPriority="251" horizontalCompressionResistancePriority="150" text="上海金雷快修车" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vsy-uM-wV1">
+                    <rect key="frame" x="20" y="9" width="212" height="16"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="16" id="WeK-OF-sgZ"/>
+                        <constraint firstAttribute="width" constant="212" id="aZF-FK-VCR"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <nil key="textColor"/>
@@ -45,7 +46,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="营业时间: 8:00-20:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="quV-0Z-T4d">
-                    <rect key="frame" x="50" y="160.5" width="131" height="16"/>
+                    <rect key="frame" x="50" y="161" width="131" height="16"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="16" id="Q0t-01-T3N"/>
                     </constraints>
@@ -57,7 +58,7 @@
                     <rect key="frame" x="290" y="0.0" width="85" height="106"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sb1-hm-Thp">
-                            <rect key="frame" x="31.5" y="69" width="22" height="22"/>
+                            <rect key="frame" x="32" y="69" width="22" height="22"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="22" id="My9-PU-vuC"/>
                                 <constraint firstAttribute="height" constant="22" id="VFL-5v-t7z"/>
@@ -112,19 +113,19 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.9分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KeK-77-8ss">
-                    <rect key="frame" x="89" y="53.5" width="30.5" height="14.5"/>
+                    <rect key="frame" x="89" y="52.5" width="31" height="15"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="服务236单" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IQA-RW-0Ij">
-                    <rect key="frame" x="150" y="53.5" width="59.5" height="14.5"/>
+                    <rect key="frame" x="150" y="52.5" width="60" height="15"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hqC-N6-A4K">
-                    <rect key="frame" x="20" y="75" width="251" height="0.5"/>
+                    <rect key="frame" x="20" y="74.5" width="251" height="1"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="0.5" id="EVc-f2-sig"/>
@@ -181,13 +182,13 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.25km" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tgz-VX-5Ei">
-                            <rect key="frame" x="315" y="36" width="40.5" height="14.5"/>
+                            <rect key="frame" x="315" y="36" width="41" height="15"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="导航" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6kP-OF-rnV">
-                            <rect key="frame" x="323.5" y="54.5" width="25" height="14.5"/>
+                            <rect key="frame" x="323" y="55" width="25" height="15"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -248,6 +249,7 @@
                 <constraint firstAttribute="bottom" secondItem="SHw-Kf-GGd" secondAttribute="bottom" id="ad5-3M-mgz"/>
                 <constraint firstItem="vsy-uM-wV1" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="bbJ-yr-vcn"/>
                 <constraint firstItem="m2S-Ew-y8U" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="cBj-Pj-P14"/>
+                <constraint firstItem="SHX-hz-M0q" firstAttribute="top" secondItem="vsy-uM-wV1" secondAttribute="top" id="clD-Vv-lxd"/>
                 <constraint firstItem="hqC-N6-A4K" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="cqF-D3-2Nf"/>
                 <constraint firstAttribute="trailing" secondItem="SHw-Kf-GGd" secondAttribute="trailing" id="dn2-Ih-DpT"/>
                 <constraint firstItem="KeK-77-8ss" firstAttribute="leading" secondItem="vJc-Cc-ARB" secondAttribute="trailing" constant="7" id="eap-EX-FgK"/>
@@ -265,7 +267,6 @@
                 <constraint firstItem="eKm-rc-TZ2" firstAttribute="top" secondItem="vsy-uM-wV1" secondAttribute="bottom" constant="7" id="sCs-pg-sXz"/>
                 <constraint firstItem="hqC-N6-A4K" firstAttribute="top" secondItem="KeK-77-8ss" secondAttribute="bottom" constant="7" id="sMd-2s-o0b"/>
                 <constraint firstItem="nTf-A9-UN4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="trI-t9-Y6P"/>
-                <constraint firstItem="SHX-hz-M0q" firstAttribute="centerY" secondItem="vsy-uM-wV1" secondAttribute="centerY" id="uLR-iV-eg5"/>
                 <constraint firstItem="m2S-Ew-y8U" firstAttribute="leading" secondItem="puN-ZN-trN" secondAttribute="trailing" constant="20" id="xLQ-cb-xI2"/>
                 <constraint firstItem="puN-ZN-trN" firstAttribute="centerY" secondItem="IQA-RW-0Ij" secondAttribute="centerY" id="xr7-tx-56m"/>
             </constraints>
@@ -292,7 +293,7 @@
                 <outlet property="shopTypeLabel" destination="SHX-hz-M0q" id="WN1-dY-p1p"/>
                 <outlet property="starImageView" destination="vJc-Cc-ARB" id="9x1-aC-BRO"/>
             </connections>
-            <point key="canvasLocation" x="-666" y="17"/>
+            <point key="canvasLocation" x="-666.5" y="16.5"/>
         </view>
     </objects>
     <resources>
